Mobile sections spacing fix

--- a/_sass/section.scss
+++ b/_sass/section.scss
@@ -40,6 +40,10 @@
     @include breakpoint(medium) {
       padding-top: 2rem;
     }
+
+    @include breakpoint(smaller) {
+      padding-bottom: 2rem;
+    }
   }
 
   &--gray {
